--- a/postgresql/08数据类型.md
+++ b/postgresql/08数据类型.md
@@ -25,7 +25,7 @@ NUMERIC = NUMERIC(0)，缺省标度是0，表示整数
 
 - 浮点数类型：real，double precision  
 >特殊值：Infinity、-Infinity、NaN  
-real->float(1~24)、double precision->float(25~53)  
+real->float(1-24)、double precision->float(25-53)  
 
 - 序列号类型
 >serial（使用序列实现）不是真正的类型，只为表建唯一标识做概念上的便利，类似AUTO_INCREMENT。在事务回滚，序列的值依然会被使用，即使列未曾被删除(“漏洞”或缺口)。
@@ -95,10 +95,11 @@ path|16+16n |闭合路径(类似多边形)	((x1,y1),...)
 path|16+16n |开放路径[(x1,y1),...]
 polygon|40+16n |多边形(类似闭合路径)((x1,y1),...)
 circle|24|圆<(x,y),r>(圆心和半径)
-## 9.网络地址类型
+## 9.网络地址类型. 
 比用纯文本类型好，提供输入错误检查和特殊的操作和功能。用于存储 IPv4 、IPv6 、MAC 地址的数据类型。
-名称 | 长度（字节）|备注 
----|---|---
+
+名称 | 长度（字节）|备注. 
+---|---|--- 
 cidr|7 或 19 |IPv4 或 IPv6 网络
 inet|7 或 19 |IPv4 或 IPv6 主机和网络
 macaddr|6 |MAC 地址
