--- a/postgresql/08数据类型.md
+++ b/postgresql/08数据类型.md
@@ -113,3 +113,6 @@ macaddr|6 |MAC 地址
 >可用于存储XML数据。 将XML数据存到text类型中的优势在于它能够为结构良好性来检查输入值，并且还支持函数对其进行类型安全性检查。
 >>没有针对xml数据类型的比较运算符，因此不能在这种类型的字段上直接创建索引。如果需要对XML数据进行快速搜索，可能的解决方法包括将表达式转换成一个字符串类型， 然后对它进行索引，或索引一个XPath表达式。
 PostgreSQL中的文本检索功能也可用于加快XML数据的全文搜索。
+## 14.JSON数据类型
+>更有利于检查每个存储的数值是可用的JSON值，json（文本的精确拷贝，保存空格、键（重复键）顺序，重新解析）和jsonb（二进制格式，支持索引（不保存空格、重复键），无需重新解析）。
+大多数应用更喜欢存储JSON数据为jsonb。
