--- a/hbase/08核心概念.md
+++ b/hbase/08核心概念.md
@@ -48,7 +48,10 @@ flush命令将内存数据写入存储文件，否则得等到超过配置的flu
 
 >- 表：每个表都有自己的目录：/hbase/表名/.tableinfo（保存HTableDescriptor序列化后的内容+元数据信息，eg.查表定义时读取）、/hbase/表名/.tmp(中间数据，eg.表被改动时)
 
->- region:查看HBase表在HDFS中的文件结构(http://blog.csdn.net/wuxiaoquan824212/article/details/52463664)
+>- region:  
+查看HBase表在HDFS中的文件结构(http://blog.csdn.net/wuxiaoquan824212/article/details/52463664)  
+HBase 在HDFS 上的目录树  
+http://www.cnblogs.com/nexiyi/p/hbase_on_hdfs_directory.html  
 eg.`USER_TEST_TABLE,AAA-AAA11110UC1,1364437081331.68b8ad74920040ba9f39141e908c67.`，eg.`USER_TEST_TABLE,AAA-AAA11110UC1,1364437081331`是region前部分，`.68b8ad74920040ba9f39141e908c67.`是哈希。  
 .META.表的region命名规则和用户表不同，它使用Jenkins hash对region名称编码，可保证其名称总是合法。region因容量大小需split，会创建与之对应的splits目录(几秒)，创建成功后被移入表目录下形成两个新的region。
 >>WAL的splitting和region的splitting有明显区别。
@@ -100,5 +103,44 @@ keyvalue结构-**加粗为key部分**
 >>定期执行日志flush的线程类，每隔很短时间(默认1s)调用sync访问。可通过HTableDescriptor设置日志flush延迟flag(默认false)。
 >- logroller
 >>主要用于清理日志。hbase默认60分钟打开一个新日志文件，时间久了会有大量文件需维护。
-- 日志回放
-- 日志一致性
+- 日志回放  
+WAL保存各种操作日志，当服务器出现错误进行恢复，其恢复过程称为日志回放。
+>1. 公用日志文件  
+每个regionserver的所有修改操作都写入同一个HLog的日志文件内。该设计源自底层文件系统，若每个region单独保存日志，同时并发写入太多文件+日志切换会降低可扩展性。master必须等待宕机的机器所有日志都分离完毕才可重新部署上面的region。
+>2. 日志切分  
+master检查.logs目录是否存在日志。日志回放更新操作(put、delete、increment，其他操作不关心)。
+回放前需按region剥离出来。
+>>**切分过程：** 读取日志，按记录所属region分组，将其(更新操作)保持在目标region附近的一个文件中，用于后续恢复。现有版本使用zookeeper，当master确认某日志就绪，regionserver会进行竞争性选举，选出一个读取切分该日志文件。切分成功后，对应的文件会被移入实际的region目录中。
+>3. 回放流程    
+①hregionserver启动，初始化regionserver相关属性；②打开所管理的region，检查是否有日志文件；③将日志条目加入memstore；④memstore将数据flush到硬盘。
+
+- 日志一致性  
+>日志保证数据安全，最好能长时间处于打开状态。为能读到服务器crash时最后写入的位置或尽可能接近该位置，需要feature:append支持。
+>>hadoop通常打开一个文件，写入大量数据，立即关闭。
+
+## 4. 写入流程
+- 客户端
+>写请求：htable的put方法，不直接提交数据到服务端。而是简单检验数据，先写到缓存区，若已满则提交，否则继续往缓存区添加。  
+重构数据：①定位put属于哪个region；②判断region属于哪个regionserver；③构造put和regionserver的映射关系。  
+查找region：把当前put的行键和每个region是start rowkey和stop rowkey进行比较。  
+提交请求：向各个regionserver并发（多线程）提交写请求。  
+等待结果：异常或成功或成功异常同时存在。  
+识别错误并重试。  
+- 服务端
+>获取region：根据region名字获取region对象，将数据批量更新到region上。  
+准备写入：region检测（region是否可读写、资源是否就绪）、上锁（hbase内置锁机制避免脏数据）、解锁（用完后）、是否flush（超阈值）等。  
+请求锁：请求尽可能多的锁，最少一个。  
+更新时间戳：默认当前时间，可手动指定。  
+写入memstore：memstore的MVCC(多版本并发控制)不会向前滚动，更新MVCC前，scan看不到。  
+更新WAL：添加数据到WALEdit，将其添加到HLog，不同步。解锁，同步HLog，最后更新MVCC，成功写入memstore，scan和get可见。
+## 5. 查询流程
+>Get本质就是Scan(从start row到start row+1)。由于hbase内部无特定行或列的索引文件，hfile的一个block就是最小访问单元，为找请求数据，regionserver和底层store实例必须加载可能包含该数据的block，然后扫描。
+- 客户端
+>get调用后，客户端进入睡眠状态，有结果则中断执行返回RPC结果，默认10次(withRetries配置)。
+- 服务端
+>1. 定位region：-ROOT-表（只有一个region，永不切分）用于保存.META.表（存放实际用户表region位置信息）所有region信息。客户端缓存访问过的region位置信息在zookeeper上，首次查询或region发生变化(切分、合并)需要发送请求。  
+递归逐层向上，给定rowkey匹配的.META.表的region所属的regionserver地址，若无效，退回上层-ROOT-表对应的.META.表region位置。也失败，则读zookeeper找到-ROOT-表region的位置。最坏情况需6次才能找到region。
+>>三层 类B+树查找模式：①zookeeper，保存-ROOT-表的region信息；②-ROOT-表查找匹配.META.表的region;③.META.表检索用户表region信息。
+>2. 数据校验转换：①检测列族是否合法；②将get转化为scan。
+>3. region内查询：RegionScanner（转换为scan）、StoreScanner(列族级别扫描器，列族可能多个故可能有多个，含成员变量Store(一个MemStoreScanner和多个StoreFileScanner))。  
+查找数据，过程：①时间戳或列过滤肯定不包含的数据(storefile或memstore)，缩小范围；②查看每个storefile最小的rowkey(升序（按行键、列族、列和时间戳排），放到队列)。获取数据，没有，则返回空。
