核心概念v1.4+音乐站v1.0
备份+压缩+音乐站案例

--- a/hbase/08核心概念.md
+++ b/hbase/08核心概念.md
@@ -144,3 +144,26 @@ master检查.logs目录是否存在日志。日志回放更新操作(put、delet
 >2. 数据校验转换：①检测列族是否合法；②将get转化为scan。
 >3. region内查询：RegionScanner（转换为scan）、StoreScanner(列族级别扫描器，列族可能多个故可能有多个，含成员变量Store(一个MemStoreScanner和多个StoreFileScanner))。  
 查找数据，过程：①时间戳或列过滤肯定不包含的数据(storefile或memstore)，缩小范围；②查看每个storefile最小的rowkey(升序（按行键、列族、列和时间戳排），放到队列)。获取数据，没有，则返回空。
+## 6. 数据备份(replication)
+在不同hbase集群间复制的一种方式，灾难恢复。
+- 备份机制架构
+>master-push架构模式(类似MySQL主从复制)，一个master可向任意slave集群复制（每个regionserver都会参与复制对应的修改）
+regionserver是hlog备份的基础，hlog日志需要保存到HDFS，来复制到其他slave集群。为简化故障恢复，会将regionserver当前读取的日志位置保存到zookeeper(复制从最老日志开始读取)，master通过随机化尽量平衡到slave。
+- 故障恢复
+>zookeeper的高可用性和语义管理队列的传输。master集群的regionserver间都有一个观察者，其中一个死掉，其他都能得到通知。在死掉的regionserver的znode（包含一个具有一个队列的peers znode）创建一个lock的znode来竞争性选举，选举后的regionserver会将所有队列传输到自己的znode下，并删掉旧znode。完成后，对每个复制出的队列创建一个新的source线程（遵守read/filter/ship模式）
+
+## 7. 数据压缩
+- 支持的压缩算法
+>- LZO:速度快，无损算法，线程安全，基于GPL协议(hbase基于Apache协议)，故需自行安装。
+>- GZIP（GUNzip），相比LZO压缩率更高但速度更慢。
+>- SNAPPY，高速压缩速度和合理压缩率，比ZLIB快，不兼容其他压缩格式。
+- 配置
+>先确保已安装压缩算法库。建表默认不压缩，值为NONE。对已存在的表重设压缩，需先下线表，修改压缩算法，最后上线表。
+```
+describe 'test'
+disable 'test'
+alter 'test',{NAME=>'cf1',COMPRESSION=>'SNAPPY'}
+describe 'test'
+enable 'test'
+```
+“尽信书不如无书”，坚持了解每个开源项目代码逻辑实现才是王道。
