--- a/hbase/10高级特性.md
+++ b/hbase/10高级特性.md
@@ -33,3 +33,13 @@ ColumnPaginationFilter，按列分页，针对列数跟多的情况。
 - thrift使用过滤器  
 ………………
 
+## 4. schema设计要点
+- 行键设计
+>关系到后续服务访问性能。
+>>1.避免单调递增行键，单线程扫描全表时，请求集中在一个region上，完成后再扫描下一个region。因为行键是有序排列。可借鉴OpenTSDB，设计key[metric_type][event_timestamp]；  
+2.行键与列族关系，一对多不冲突；  
+3.行键长度，短键并不比长键性能好多少，设计时要满足语义又要尽量降低存储空间；    
+4.行键不能改变；  
+5.尽量最小化行键长度，在storefile中，索引用来加速值的随机访问，行键和列名会在数据重复上亿次，故需最小化行键和列名大小。
+
+- 列族设计
