--- a/hbase/10高级特性.md
+++ b/hbase/10高级特性.md
@@ -43,3 +43,6 @@ ColumnPaginationFilter，按列分页，针对列数跟多的情况。
 5.尽量最小化行键长度，在storefile中，索引用来加速值的随机访问，行键和列名会在数据重复上亿次，故需最小化行键和列名大小。
 
 - 列族设计
+>1.列族数量，hbase不能很好处理2或3个以上的列族，当一个列族操作大量数据时会引发一个flush，不想关的列族也会flush，造成很多无效IO负载；  
+2.列族名长度，节省存储空间，尽量减少列族长度，最好是一个字符；  
+3.列族基数，eg.列族A有100万行，列族B有10亿行，列族A可能被分散到很多regionserver或region中，导致扫描A时性能低下。
