--- a/hbase/09核心概念.md
+++ b/hbase/09核心概念.md
@@ -166,4 +166,4 @@ alter 'test',{NAME=>'cf1',COMPRESSION=>'SNAPPY'}
 describe 'test'
 enable 'test'
 ```
-“尽信书不如无书”，坚持了解每个开源项目代码逻辑实现才是王道。
+“尽信书不如无书”，坚持了解每个开源项目代码逻辑的实现才是王道。
