--- a/postgresql/08数据类型.md
+++ b/postgresql/08数据类型.md
@@ -1,3 +1,5 @@
+
+
 ## 1. 数值类型
 名称 | 长度(字节)|备注
 ---|---|---
@@ -25,7 +27,7 @@ NUMERIC = NUMERIC(0)，缺省标度是0，表示整数
 
 - 浮点数类型：real，double precision  
 >特殊值：Infinity、-Infinity、NaN  
-real->float(1-24)、double precision->float(25-53)  
+real->float(1~24)、double precision->float(25~53)  
 
 - 序列号类型
 >serial（使用序列实现）不是真正的类型，只为表建唯一标识做概念上的便利，类似AUTO_INCREMENT。在事务回滚，序列的值依然会被使用，即使列未曾被删除(“漏洞”或缺口)。
@@ -36,8 +38,21 @@ CREATE TABLE tablename (
     colname SERIAL
 );
 
-////等价
+//等价
 CREATE SEQUENCE tablename_colname_seq;
+
+CREATE SEQUENCE event_id_seq  
+START WITH 1  
+INCREMENT BY 1  
+NO MINVALUE  
+NO MAXVALUE  
+CACHE 1;  
+
+//重置计数器
+alter sequence event_id_seq restart with 1
+  
+alter table event alter column id set default nextval('event_id_seq'); 
+
 CREATE TABLE tablename (
     colname integer NOT NULL DEFAULT nextval('tablename_colname_seq')
 );
@@ -95,11 +110,10 @@ path|16+16n |闭合路径(类似多边形)	((x1,y1),...)
 path|16+16n |开放路径[(x1,y1),...]
 polygon|40+16n |多边形(类似闭合路径)((x1,y1),...)
 circle|24|圆<(x,y),r>(圆心和半径)
-## 9.网络地址类型. 
+## 9.网络地址类型
 比用纯文本类型好，提供输入错误检查和特殊的操作和功能。用于存储 IPv4 、IPv6 、MAC 地址的数据类型。
-
-名称 | 长度（字节）|备注. 
----|---|--- 
+名称 | 长度（字节）|备注 
+---|---|---
 cidr|7 或 19 |IPv4 或 IPv6 网络
 inet|7 或 19 |IPv4 或 IPv6 主机和网络
 macaddr|6 |MAC 地址
@@ -116,3 +130,5 @@ PostgreSQL中的文本检索功能也可用于加快XML数据的全文搜索。
 ## 14.JSON数据类型
 >更有利于检查每个存储的数值是可用的JSON值，json（文本的精确拷贝，保存空格、键（重复键）顺序，重新解析）和jsonb（二进制格式，支持索引（不保存空格、重复键），无需重新解析）。
 大多数应用更喜欢存储JSON数据为jsonb。
+
+http://www.postgres.cn/docs/9.6/
