--- a/kafka/01.Introducing Kafka.md
+++ b/kafka/01.Introducing Kafka.md
@@ -38,3 +38,18 @@ kafka目标是通过提供一种机制来统一线下和线上处理：
 Hadoop系统中的并行负载以及在一组机器上的分区实时消耗的能力（处理流式数据很有用）。  
 从架构的角度来看，它更接近于传统的消息传递系统，如ActiveMQ或RabitMQ。
 
+## 3. Kafka use cases
+>**kafka使用案例：**
+>- ①日志收集：收集到文件服务器或HDFS，以消息流形式清洗抽象的日志或事件数据，并提供较低延迟处理（多数据源&分布式）；
+>- ②流处理：在多个阶段对收集数据进行处理（eg.消费原始数据后，丰富或转化为新topic供进一步消费）；
+>- ③日志提交：在大规模分布式系统中，复制日志，来帮故障节点恢复状态；
+>- ④点击流跟踪：实时发布（eg.页面、搜索）到中心topic，可供订阅消费，包括实时处理和监控；
+>- ⑤消息传递：消息brokers将数据处理和分离，kafka可取代许多流行的消息传递brokers，提供更高吞吐、内置分区、复制和容错服务。
+
+>**公司案例：**
+>- ①LinkedIn：实时活动数据和操作记录，eg.LinkedIn News Feed and LinkedIn Today、离线分析系统；
+>- ②DataSift：收集监控事件和用户实时消费数据流；
+>- ③Twitter：集成到storm；
+>- ④Foursquare：整合监控和生产系统；
+>- ⑤做为所有系统的事件总线（广播），记录、日志、定制事件等。
+
