Setting Up a Kafka Cluster v1.0
简介&单节点-单broker集群

--- a/kafka/01.Introducing Kafka.md
+++ b/kafka/01.Introducing Kafka.md
@@ -60,4 +60,13 @@ Kafka 0.8.x提供了许多高级特性:
 >- ③从轮询模式改为长轮询模式，阻塞直到从生产者提交的请求返回数据，避免了频繁拉；
 >- ④附带一组管理工具：控制集群的关闭和主从选举。
 
-局限：不能向后兼容。
+
+>kafka使用scala&gradle构建，需要java1.7及以后的版本。
+
+步骤：  
+`wget http://apache.tradebit.com/pub/kafka/0.8.1.1/kafka_2.9.2-0.8.1.1.tgz`  
+(http://kafka.apache.org/downloads.html)  
+`tar xzf kafka_2.9.2-0.8.1.1.tgz`  
+`export KAFKA_HOME=/opt/kafka_2.9.2-0.8.1.1`  
+`export PATH=$PATH:$KAFKA_HOME/bin`  
+
