--- a/kafka/01.Introducing Kafka.md
+++ b/kafka/01.Introducing Kafka.md
@@ -60,7 +60,9 @@ Kafka 0.8.x提供了许多高级特性:
 >- ③从轮询模式改为长轮询模式，阻塞直到从生产者提交的请求返回数据，避免了频繁拉；
 >- ④附带一组管理工具：控制集群的关闭和主从选举。
 
+局限：不能向后兼容。
 
+## 5. Installing prerequisites
 >kafka使用scala&gradle构建，需要java1.7及以后的版本。
 
 步骤：  
