--- a/million-cache/01异步多级缓存.md
+++ b/million-cache/01异步多级缓存.md
@@ -1,8 +1,5 @@
-
-
-### 大型电商网站的详情页架构
+### 1. 大型电商网站的详情页架构
 大网站的模板，可能所有页面要重新渲染。
-
 >- 商品服务、店铺服务、品牌服务->MQ
 （一有变更就发送到MQ上，eg.价格修改）
 >- 缓存数据生产服务（多级缓存架构——ehcache本地缓存->redis缓存） 监听MQ  
@@ -11,10 +8,130 @@
 
 - 用户访问前端，前端通过nginx取本地缓存，若有，则直接渲染到HTML模板;  
 - 若无，到redis查询，并返回到本地缓存，渲染HTML;
-- 若redis无数据（内存有限，被缓存清理算法清掉），则发请求到缓存数据生产服务（先到ehcache取，没有再发送请求到商品服务（需事务，一般为mysql））  
+- 若redis无数据（内存有限，被缓存清理算法清掉），则发请求到缓存数据生产服务（先到ehcache取，没有再发送请求到商品服务（需事务，一般为mysql））
 
 大多数情况下，数据直接从nginx本地取缓存，没有网络请求开销，没业务逻辑，直接渲染到模板中，HTML页面返回。
 
 支撑高并发、高可用、海量数据、备份、随时可恢复，缓存架构要支撑这些要点，首先redis就得支撑。
 
 redis架构，每秒钟几十万的访问量QPS，99.99%的高可用性，TB级的海量数据，备份和恢复，支撑缓存架构，最基础的就是redis架构。
+
+### 2. 搭建环境
+- 配置网络  
+`vim /etc/sysconfig/network-scripts/ifcfg-eth0`
+
+```
+
+案例一:
+HWADDR=00:0c:29:d1:30:52
+TYPE=Ethernet
+BOOTPROTO=none
+IPADDR=192.168.25.153
+PREFIX=24
+GATEWAY=192.168.25.2
+DNS1=192.168.25.2
+DEFROUTE=yes
+IPV4_FAILURE_FATAL=yes
+IPV6INIT=no
+NAME="eth0"
+UUID=6e6f9829-0737-4943-ab21-61d6173ba8c4
+ONBOOT=yes
+LAST_CONNECT=1438160743
+
+案例二:
+DEVICE=eth0
+TYPE=Ethernet
+ONBOOT=yes
+BOOTPROTO=dhcp
+
+或
+
+BOOTPROTO=static
+IPADDR=192.168.0.X
+NETMASK=255.255.255.0
+GATEWAY=192.168.0.1
+```
+
+- **重启网卡**   
+`service network restart`
+- **配置hosts**   
+`vi /etc/hosts`
+(配置本机的hostname到ip地址的映射)
+
+- **关闭防火墙**  
+>`service iptables stop`  
+`service ip6tables stop`  
+`chkconfig iptables off`  
+`chkconfig ip6tables off`  
+>>`vi /etc/selinux/config`
+SELINUX=disabled
+
+- **安装Perl**
+
+```
+wget http://www.cpan.org/src/5.0/perl-5.16.1.tar.gz
+tar -xzf perl-5.16.1.tar.gz
+cd perl-5.16.1
+./Configure -des -Dprefix=/usr/local/perl
+make && make test && make install
+perl -v
+```
+- **ssh免密码互相通信**  
+`ssh-keygen -t rsa`
+>生成本机公钥，不断敲回车，ssh-keygen命令默认会将公钥放在/root/.ssh目录下
+
+`cd /root/.ssh`  
+`cp id_rsa.pub authorized_keys`  
+>将公钥复制为authorized_keys文件，此时使用ssh连接本机就不需要输入密码了
+>>接着配置三台机器间的ssh免密码登录
+使用`ssh-copy-id -i hostname`命令将本机的公钥拷贝到指定机器的authorized_keys文件中。
+
+### 3.redis安装&生产环境启动方案
+- **安装**  
+redis-3.2.8.tar.gz（截止2017年4月的最新稳定版）
+```
+tar -zxvf redis-3.2.8.tar.gz
+cd redis-3.2.8
+make && make test && make install
+```
+
+- **生产环境启动方案**
+>- ①redis utils目录下，有个redis_init_script脚本;
+>- ②将redis_init_script脚本拷贝到linux的/etc/init.d目录中，将redis_init_script重命名为redis_6379(6379为redis实例监听的端口号);
+>- ③修改redis_6379脚本的第6行的REDISPORT，设置为相同的端口号（默认6379）;
+>- ④创建两个目录：/etc/redis（存放redis的配置文件），/var/redis/6379（存放redis的持久化文件）;
+>- ⑤修改redis配置文件（默认在根目录下，redis.conf），拷贝到/etc/redis目录中，修改名称为6379.conf;
+>- ⑥修改redis.conf中的部分配置为生产环境;
+
+```
+#让redis以daemon进程运行
+daemonize	yes	
+#设置redis的pid文件位置			
+pidfile		/var/run/redis_6379.pid 
+#设置redis的监听端口号	
+port		6379	
+#设置持久化文件的存储位置			
+dir 		/var/redis/6379	
+```
+>- ⑦启动redis:执行`cd /etc/init.d`、 `chmod 777 redis_6379`、`./redis_6379 start`
+>- ⑧确认redis进程是否启动:`ps -ef | grep redis`
+>- ⑨让redis跟随系统自动启动。
+
+```
+#在redis_6379脚本中，最上面，加入两行注释：
+
+# chkconfig:   2345 90 10
+# description:  Redis is a persistent key-value database
+chkconfig redis_6379 on
+```
+
+- **redis cli的使用**
+>连接本机的6379端口停止redis进程  
+`redis-cli SHUTDOWN`  
+指定要连接的ip和端口号  
+`redis-cli -h 127.0.0.1 -p 6379 SHUTDOWN`
+ping redis的端口，是否正常  
+`redis-cli PING`  
+进入交互式命令行  
+`redis-cli`
+
