异步多级缓存v1.2
持久化意义

--- a/million-cache/01异步多级缓存.md
+++ b/million-cache/01异步多级缓存.md
@@ -135,3 +135,22 @@ ping redis的端口，是否正常
 进入交互式命令行  
 `redis-cli`
 
+### 4. 持久化机对生产环境的灾难恢复意义
+>- redis的持久化、RDB、AOF、区别，各自的特点、适合场景？  
+>- 企业级的持久化方案？  
+>- 跟哪些企业级场景结合起来使用？
+
+redis持久化的意义:  
+**故障恢复**
+
+>若无持久化，redis遇到灾难性故障时，会丢失所有数据；若将数据持久化到磁盘上&定期同步和备份到一些云存储服务，即可保证数据不全部丢失，还可恢复一部分数据。
+>>持久化主要做灾难恢复、数据恢复，也可以归类到高可用环节。
+
+>若redis挂了，变得不可用，要尽快变得可用，重启redis，尽快让它对外提供服务。当大量请求过来，缓存全部无法命中时，即redis找不到数据，这时直接到数据源头找，mysql一下子无法承受这样的负载，会崩溃，即缓存雪崩问题。
+>>mysql挂掉，redis的数据都无法重新加载恢复。
+
+>若把redis的持久化做好，备份和恢复方案做到企业级的程度，那即使redis故障，也可通过备份数据，快速恢复，一旦恢复，立即对外提供服务。
+
+### 5. RDB和AOF两种持久化机制的工作原理
+redis的持久化，跟高可用，是有关系的。
+redis持久化：RDB，AOF
