异步多级缓存v1.3
AOF VS RDB

--- a/million-cache/01异步多级缓存.md
+++ b/million-cache/01异步多级缓存.md
@@ -154,3 +154,40 @@ redis持久化的意义:
 ### 5. RDB和AOF两种持久化机制的工作原理
 redis的持久化，跟高可用，是有关系的。
 redis持久化：RDB，AOF
+
+#### 5.1 两种持久化机制的介绍（RDB和AOF）
+>- **RDB持久化机制：**  
+对redis的数据执行周期性持久化。AOF机制对每条写入命令以append-only的模式写入一个日志文件中，在redis重启时，可回放AOF日志中的写入指令来重构整个数据集。
+>>通过RDB或AOF，都可将redis内存中的数据持久化到磁盘，然后可将这些数据备份到别的地方，eg.阿里云。
+>>>若redis宕机，服务器内存和磁盘的数据都丢了，可从云服务上拷贝回来放到指定的目录，然后重新启动redis，就会自动根据持久化文件，恢复内存中的数据，继续对外提供服务。
+
+>>**注意：** 若同时使用RDB和AOF两种持久化机制，重启redis时，会用AOF来重构数据，因为AOF中的数据更完整。
+
+#### 5.2 RDB持久化机制
+- 优点
+>①RDB会生成多个数据文件（每个文件都代表某一个时刻redis的数据），非常适合做冷备，可将数据文件发送到远程服务器，以预定好的备份策略来定期备份redis中的数据；  
+②RDB对redis对外提供的读写服务，影响非常小，可让redis保持高性能，因为redis主进程只需fork一个子进程，让子进程执行磁盘IO操作来进行RDB持久化即可；  
+③相对于AOF持久化机制来说，直接基于RDB数据文件来重启和恢复redis进程，更加快速。
+- 缺点
+>①若想在redis故障时，尽可能少的丢失数据，那么RDB没有AOF好。一般来说，RDB数据快照文件，都是每隔5分钟，或者更长时间生成一次，此时就得接受一旦redis进程宕机，那么会丢失最近5分钟的数据；
+②RDB每次在fork子进程来执行RDB快照数据文件生成的时候，若文件特别大，可能会导致对客户端提供的服务暂停数毫秒，或者甚至数秒。
+
+#### 5.3 AOF持久化机制
+- 优点
+>①AOF可更好的保护数据不丢失。一般AOF会每隔1秒，通过一个后台线程执行一次fsync操作，最多丢失1秒钟的数据；  
+②AOF日志文件以append-only模式写入，所以没有任何磁盘寻址的开销，写入性能非常高，而且文件不容易破损，即使文件尾部破损，也很容易修复；  
+③AOF日志文件即使过大，出现后台重写操作，也不会影响客户端的读写。因为在rewrite log时，会对其中的指导进行压缩，创建出一份需要恢复数据的最小日志出来。再创建新日志文件时，老的日志文件还是照常写入。当新的merge后的日志文件ready时，再交换新老日志文件即可；  
+④AOF日志文件的命令通过非常可读的方式进行记录，这个特性非常适合做灾难性的误删除的紧急恢复。eg.某人不小心用flushall命令清空了所有数据，只要这时候后台rewrite还没有发生，那么就可以立即拷贝AOF文件，将最后一条flushall命令给删了，然后再将该AOF文件放回去，就可以通过恢复机制，自动恢复所有数据。
+
+- 缺点
+>①对同一份数据来说，AOF日志文件通常比RDB数据快照文件更大；  
+②AOF开启后，支持的写QPS会比RDB支持的写QPS低，因为AOF一般会配置成每秒fsync一次日志文件，当然，每秒一次fsync，性能也还是很高的(如果设置成每一条数据，都fsync一次，那redis就完蛋了，性能（QPS）大降)；  
+③以前AOF发生过bug，就是通过AOF记录的日志，进行数据恢复的时候，没有恢复一模一样的数据出来。所以说，类似AOF这种较为复杂的基于命令日志/merge/回放的方式，比基于RDB每次持久化一份完整的数据快照文件的方式，更加脆弱一些，容易有bug。不过AOF就是为了避免rewrite过程导致的bug，因此每次rewrite并不是基于旧的指令日志进行merge的，而是基于当时内存中的数据进行指令的重新构建，这样健壮性会好很多；  
+④唯一比较大的缺点：做数据恢复时比较慢，做冷备、定期备份不太方便，可能要自己手写复杂的脚本，做冷备不太合适。
+
+#### 5.4 RDB和AOF该如何选择
+>①不要仅仅使用RDB，因为那样会导致你丢失很多数据;  
+②也不要仅仅使用AOF，因为那样有两个问题：第一，通过AOF做冷备，没有RDB做冷备来的恢复速度快;第二，RDB每次简单粗暴生成数据快照，更加健壮，可避免AOF这种复杂的备份和恢复机制的bug；  
+③综合使用AOF和RDB两种持久化机制，用AOF来保证数据不丢失，作为数据恢复的第一选择; 用RDB来做不同程度的冷备，在AOF文件都丢失或损坏不可用的时候，还可使用RDB进行快速的数据恢复。
+
+
