--- a/kafka/01.Introducing Kafka.md
+++ b/kafka/01.Introducing Kafka.md
@@ -70,5 +70,11 @@ Kafka 0.8.x提供了许多高级特性:
 (http://kafka.apache.org/downloads.html)  
 `tar xzf kafka_2.9.2-0.8.1.1.tgz`  
 `export KAFKA_HOME=/opt/kafka_2.9.2-0.8.1.1`  
-`export PATH=$PATH:$KAFKA_HOME/bin`  
+`export PATH=$PATH:$KAFKA_HOME/bin`
+
+- 查看zookeeper根目录存放的子目录（进入zookeeper的方式）：  
+`zkCli.sh -server localhost:2181`  
+`ls /MyKafka`  
+`ls /MyKafka/MyTrack`  
+`get /MyKafka/MyTrack/partition_0`  
 
