--- a/kafka/03.Kafka Design.md
+++ b/kafka/03.Kafka Design.md
@@ -35,3 +35,12 @@ kafka动态维护一份内部同步副本集，它从leader捕获并总是将最
 从消费者角度看，副本具有相同的日志（带有相同的offset），消费者在日志中控制它的位置。
 >- 对于消费者来说，kafka通过读取消息，保证消息至少可发送一次，处理消息后，保存他们的位置。
 如果在处理消息后，消费者进程崩溃，但在保存他们位置前，另外一个消费者进程需要消费topic主题，可能会接收到前面的几条信息（已被处理）。
+
+## 2. Log compaction
+>日志压缩是比粗粒度的基于时间保存机制的更细粒度的消息保存机制。它确保最后一个已知值若要更新删除的主键，必须删除记录保存日志中topic分区的消息主键。
+日志压缩也用于处理系统故障或重启等案例中。在kafka集群中，保存策略可根据每个主题设置(eg.基于时间、基于大小、基于日志压缩)。  
+>>日志压缩确保以下内容：
+>>- ①消息始终有序；  
+>>- ②消息将具有顺序偏移量，且不会发生改变；  
+>>- ③从偏移量0开始读取，或从日志的上一次消费记录的开始处，至少可以看到所有记录的最终状态。  
+
