--- a/million-cache/03隔离术.md
+++ b/million-cache/03隔离术.md
@@ -76,3 +76,17 @@ eg.2访问分布式服务B、D、E，D是个可降级服务，超时或网络故
 ②降级：超时降级、资源不足时（线程或信号量）降级——返回拖地数据；  
 ③熔断器：失败率达阈值自动触发降级，快速失败会进行快速恢复；  
 ④提供请求缓存、请求合并。
+
+### 11.基于servlet3实现请求隔离
+>页面异步加载，eg.库存、图书相关、延保服务等，可使用servlet3的请求异步化模型。
+>>Tomcat收到HTTP请求后：  
+①解析为HttpServletRequest；  
+②交给servlet业务处理；
+③HttpServletResponse写出回应。
+
+>在2.x，这些处理都要同步进行（必须在一个线程），请求结束时，同步进行请求回收。
+>>Tomcat7.x实现了servlet 3规范，好处：  
+①NIO，更高并发数；  
+②请求解析和业务处理线程池分离；  
+③根据业务重要性对业务分级，并分级线程池；  
+④对业务线程池进行监控、运维、降级等处理。  
