--- a/million-cache/03隔离术.md
+++ b/million-cache/03隔离术.md
@@ -90,3 +90,33 @@ eg.2访问分布式服务B、D、E，D是个可降级服务，超时或网络故
 ②请求解析和业务处理线程池分离；  
 ③根据业务重要性对业务分级，并分级线程池；  
 ④对业务线程池进行监控、运维、降级等处理。  
+
+- 请求解析&业务处理线程池分离  
+servlet3之前——线程模型：  
+`HTTP请求->Tomcat线程池->线程1（业务处理、生成响应）、线程2、……`  
+>不能灵活定义业务处理模型，因为不能分离线程处理
+
+servlet3之后——线程模型：  
+`HTTP请求->Tomcat单线程（请求解析）->业务队列->业务线程池->业务线程1（业务处理、生成响应）、业务线程2、……`
+>好处：
+>>根据业务重要性对业务分级定义线程池；
+可拿到业务线程池，进行监控、降级等。
+
+- 业务线程池隔离
+>系统在发展期间，可对服务进行业务分级和限制。
+>>①分为核心、非核心业务级别；
+②为不同级别业务定义不同线程池；
+③根据业务量定义各级别线程池大小。
+
+`HTTP请求->Tomcat单线程（请求解析）->核心业务队列->核心业务线程->池业务线程1（业务处理、生成响应）、业务线程2、……`  
+`HTTP请求->Tomcat单线程（请求解析）->非核心业务队列->核心业务线程->池业务线程1（业务处理、生成响应）、业务线程2、……`
+>非核心业务因数据库连接池或网络问题抖动，不影响核心业务。
+
+- 业务线程池监控、运维、降级
+>可对业务线程池监控，eg.当前处理请求数、是否负载瓶颈、业务报警等。
+>>- 对业务线程池扩容，或清空线程池（直接将老请求拒绝掉，防雪崩、防容器崩溃）    
+>>- 还可对业务队列和业务线程池做很多处理：定制业务队列，按用户级别对请求排序，高级别用户得到更高优先级的业务处理。
+
+- 使用servlet3异步化
+>异步化后吞吐量（和灵活性）提升了，但响应时间也变长了。  
+>>eg.请求解析和业务处理线程池分离；业务分级、分级线程池；对业务线程池监控、运维、降级等。
