--- a/million-cache/04限流详解.md
+++ b/million-cache/04限流详解.md
@@ -36,3 +36,177 @@
 - 计数器限流
 >限制总并发数，eg.数据库连接池、线程池大小核秒杀并发数。简单粗暴的总数量限流。
 
+### 2. 应用级限流
+
+- 限流总并发/连接/请求数  
+系统一定有极限并发/请求数（TPS/QPS阈值），最好进行过载保护。
+>>Tomcat的Connector的配置：  
+acceptCount：队列排队，超出则拒绝连接；  
+maxConnections：瞬时最大连接数，超出排队等待；  
+maxThreads：处理请求的最大线程数。
+
+>mysql（max_connection）、redis（tcp-backlog）也有类似限制连接数配置。
+
+- 限流总资源数
+>稀缺资源（eg.数据库连接、线程），使用池化技术限制总资源数，超出可等待或抛异常。
+
+- 限流某个接口的总并发/请求数
+>有突发访问情况，eg.抢购业务，限制接口的总并发/请求数，可为每个接口设置阈值。
+java的AutomicLong或Semaphore限流。(Hystix在信号量模式下，也使用Semaphore)
+
+```
+try{
+    if(atomic.incrementAndGet()>限流数){
+        //拒绝连接
+    }
+    //处理连接
+}finally{
+    atomic.decrementAndGet();
+}
+```
+>适合可降级或需过载保护的服务限流，eg.抢购业务，超出排队或告诉用户没货。
+某些开发平台啊也会限制用户调用某个接口的试用请求量，可用该方式（简单粗暴）。
+
+- 限流某个接口的时间窗请求数  
+>限制某接口服务每秒/分钟/天的请求数（调用量），进行限速。
+(eg.商品详情页会调用基础商品服务，更新量较大可能会打挂基础服务)
+对每秒/每分钟调用量进行限速：
+
+```
+LoadingCache<Long,AtomicLong> counter= CacheBuilder.newBuilder().expireAfterWrite(2,TimeUnit.SECONDS).build(new CacheLoader<Long,AtomicLong>(){
+	@Override public AtomicLong load(Long key) throws Exception {
+		return new AtomicLong(0);
+	}
+});
+long limit=1000;
+while (true){
+	//得到当前秒
+	long currentSeconds=System.currentTimeMillis()/1000;
+	try {
+		if(counter.get(currentSeconds).incrementAndGet()>1000){
+            System.out.println("限流了:"+currentSeconds);
+        }
+	} catch (ExecutionException e) {
+		e.printStackTrace();
+	}
+}
+```
+>使用guava的Cache来存储计数器，过期时间设置为2秒（保证能记录1秒内的计数）
+虽然简单粗暴，但应付以上场景够了。
+
+- 平滑限流某接口的请求数
+>前面的方式，不能很好应对突发请求（瞬间请求都被允许），某些场景需整形为平均速率请求处理
+(eg.5r/s，则每200ms处理一请求)。guava框架提供了令牌桶算法实现。
+
+
+```
+@Test
+public void hello0Test(){
+    /**
+     * 将突发请求速率固定为平均请求速率
+     */
+    //令牌桶容量为5，且每秒发5个令牌
+    RateLimiter limiter= RateLimiter.create(5);
+    //消费令牌，有足够令牌，则返回0；否则等待一段时间
+    System.out.println(limiter.acquire());
+    System.out.println(limiter.acquire());
+    System.out.println(limiter.acquire());
+    System.out.println(limiter.acquire());
+    System.out.println(limiter.acquire());
+   /* 0.0
+    0.199649
+    0.195498
+    0.19947
+    0.199926*/
+}
+@Test
+public void hello1Test(){
+    /**
+     * 将突发请求速率固定为平均请求速率
+     */
+    //令牌桶容量为5，且每秒发5个令牌
+    RateLimiter limiter= RateLimiter.create(5);
+    //消费令牌，有足够令牌，则返回0；否则等待一段时间
+    //令牌桶算法允许突发（消费未来的令牌）
+    System.out.println(limiter.acquire(10));
+    //由于提前消费未来令牌，此处差不多等2秒后响应
+    System.out.println(limiter.acquire(1));
+    System.out.println(limiter.acquire(1));
+    System.out.println(limiter.acquire(1));
+   /* 0.0
+    1.199718
+    0.195006
+    0.200018*/
+}
+@Test
+public void hello2Test(){
+    /**
+     * 将突发请求速率固定为平均请求速率
+     */
+    //令牌桶容量为5，且每秒发5个令牌
+    RateLimiter limiter= RateLimiter.create(5);
+    //消费令牌，有足够令牌，则返回0；否则等待一段时间
+    System.out.println(limiter.acquire(1));
+    try {
+        Thread.sleep(2000);
+    } catch (InterruptedException e) {
+        e.printStackTrace();
+    }
+    System.out.println(limiter.acquire(1));
+    System.out.println(limiter.acquire(1));
+    System.out.println(limiter.acquire(1));
+
+    System.out.println(limiter.acquire(1));
+    System.out.println(limiter.acquire(1));
+    /*0.0
+    0.0
+    0.0
+    0.0
+    0.0
+    0.0*/
+}
+```
+令牌桶算法允许突发（消费未来的令牌）
+允许将一段时间内没消费的令牌暂存到令牌桶中，保留待未来使用，并允许未来请求的突发。
+
+>- 平滑突发限流（SmoothBursty）通过平均速率和最后一次新增令牌的时间算出下次新增令牌的时间。  
+允许一定程度突发，需要一种平滑速率的限流工具，冷启动后慢慢趋于平均固定速率。  
+guava的SmoothWarmingUp实现了以上需求，可认为是漏桶算法（但在某些特殊场景下，又不一样）。
+
+**创建方式：** 
+`RateLimiter create(double permitsPerSecond, long warmupPeriod, TimeUnit unit)`  
+>permitsPerSecond：每秒新增令牌数；  
+warmupPeriod：冷启动速率过渡到平均速率的时间间隔。  
+```
+@Test
+public void hello3Test() {
+     */
+    //令牌桶容量为5，且每秒发5个令牌
+    RateLimiter limiter = RateLimiter.create(5, 1000, TimeUnit.SECONDS);
+    for (int i = 0; i < 5; i++) {
+        System.out.println(limiter.acquire());
+    }
+    try {
+        Thread.sleep(1000L);
+    } catch (InterruptedException e) {
+        e.printStackTrace();
+    }
+    for (int i = 0; i < 5; i++) {
+        System.out.println(limiter.acquire());
+    }
+    /*0.0
+    0.599719
+    0.594369
+    0.582401
+    0.548606
+    0.0
+    0.599291
+    0.599381
+    0.599513
+    0.59804*/
+}
+```
+>速率是梯形上升速率：冷启动会以一个较大速率慢慢达到平均速率。
+可调节warmupPeriod参数实现一开始就是平滑固定速率。
+应用级限流只是在单应用内的请求限流，不能全局，所以还需要分布式和接入层的限流。
+
