完整性约束v1.1
补充理论

--- a/oracle/完整性约束.md
+++ b/oracle/完整性约束.md
@@ -93,6 +93,31 @@ YG4                            TABLE
 YG5                            TABLE
 ```
 
+### 建立主键的五种方式
+
+```SQL
+1）create table users1 (userid varchar2(10) primary key , username varchar2(20)); -- 主键名字，Oracle起的
+2）create table users2 (userid varchar2(10) constraint pk_users2 primary key , username varchar2(20)  ); -- 主键名字，自己指定
+3）create table users3 (userid varchar2(10) , username varchar2(20) , primary key( userid) ); -- 主键名字，Oracle起的
+4）create table users4 (userid varchar2(10) , username varchar2(20) , CONSTRAINTS pk_users4 primary key (userid ) );  --主键名字，自己指定
+5）create table users5 (userid varchar2(10) , username varchar2(20) );
+alter table users5 add  CONSTRAINTS pk_users5 primary key (userid ) ;  --后来加上主键。
+```
+### 问题小测
+>
+    建立2个表，一个是stuInfo（学号sno，姓名
+    sname，年龄sage，性别smale，系编号
+    deptNo），一个是department（系编号deptNo，
+    系名称deptName）。
+     要求：
+        每个表有主键。
+        stuInfo表建立外键。
+        学生的姓名不能为空。
+        学生的年龄要在18到50之间。
+        学生的性别必须是男女之一，默认是男。
+        stuInfo表的deptNo列，要参照department表的
+    deptNo列。
+
 ```SQL
 --如果大小是固定的，要用char而不要用varchar，可以大大提高检索速度
 create table stuinfo(
@@ -111,3 +136,29 @@ references department(deptno);
 
 --如果依赖外键被删掉了，那oracle也会自动的在其表上移除外键。
 ```
+- 给已有的表添加约束
+```SQL
+--除了添加not null需要使用modify命令，其他都是类似
+--alter table tablename add CONSTRAINTS的方式。
+
+--上面例子，允许stuInfo中的姓名可以为空：
+alter table stuinfo modify sname null;
+--允许stuInfo中的姓名不能重复
+alter table stuinfo  add constraints  sname_unique  unique(sname) ;
+--要求department的系名称列的内容，必须大于4个字符长度
+alter table 
+department add constraints  deptName_check  check(length(deptName)>4);
+```
+- 删除约束  
+```
+alter table 表名 drop constraint 约束名;
+-- 删除刚才建立的department表上的deptName_check 约束
+alter table department drop constraint deptName_check;  
+--删除主键语句：
+alter table 表名 drop primary key;
+--如果出错：ORA-02273: 此唯一/主键已被某些外键引用，可以：
+alter table department drop primary key cascade;
+--如果删除一个主键被引用的表，可以：
+drop table 表名 cascade constraints;
+```
+
