用户和权限管理v1.1
创建新用户

--- a/oracle/用户和权限管理.md
+++ b/oracle/用户和权限管理.md
@@ -1,4 +1,4 @@
-### 目标
+﻿### 目标
 >
     1 掌握建立用户、概要文件的使用
     2 掌握系统权限的含义及授予、回收
@@ -11,7 +11,26 @@
 >>SYS用户相当于root用户  
 SCOTT用户是Oracle 数据库的一个示范帐户，在数据库安装时创建
 
-- 练习
+#### Oracle11g基础--创建新用户
+>
+	要连接到Oracle数据库，就需要创建一个用户帐户  
+	每个用户都有一个默认表空间和一个临时表空间  	CREATE USER命令用于创建新用户
+-- 创建一个名称为 wang 的用户，其密码为 wangpwdCREATE USER wang IDENTIFIED BY wangpwd;
+
+#### profile（概要文件）管理用户
+>当创建用户时候，如果没有指定profile，那么Oracle把名字叫default的profile赋予给用户。     
+指定test1只能最多输入3次密码，创建profile文件：  
+create  profile  pro1 limit failed_login_attempts 3 password_lock_time 2;  其中，FAILED_LOGIN_ATTEMPTS:用于指定联系登陆的最大失败次数.     PASSWORD_LOCK_TIME:用于指定帐户被锁定的天数. 创建属于pro1的用户：       create user   aa identified by aa profile pro1;  
+修改用户的profile文件：   
+alter user test1 profile pro1;
+
+解除锁定：  
+alter  user  test1  account  unlock;   
+终止口令：需要每隔10天修改密码，最多宽限2天：  
+ALTER PROFILE "PRO1" LIMIT PASSWORD_LIFE_TIME 10 PASSWORD_GRACE_TIME 2。    
+删除profile：  
+drop profile pro1 cascade;   
+使得test1的profile重新变成了default - 练习
 ```SQL
 SQL> conn system/system@ZSR;
 Connected to Oracle Database 11g Express Edition Release 11.2.0.2.0 
