用户和权限管理v1.3
完善

--- a/oracle/用户和权限管理.md
+++ b/oracle/用户和权限管理.md
@@ -11,7 +11,142 @@
 >>SYS用户相当于root用户  
 SCOTT用户是Oracle 数据库的一个示范帐户，在数据库安装时创建
 
-- 练习
+#### Oracle11g基础--创建新用户
+>
+	要连接到Oracle数据库，就需要创建一个用户帐户  
+
+	每个用户都有一个默认表空间和一个临时表空间  	CREATE USER命令用于创建新用户
+```SQL
+-- 创建一个名称为 wang 的用户，其密码为 
+wangpwdCREATE USER wang 
+IDENTIFIED BY wangpwd;
+```
+#### profile（概要文件）管理用户
+>当创建用户时候，如果没有指定profile，那么Oracle把名字叫default的profile赋予给用户。  
+```SQL
+--指定test1只能最多输入3次密码，创建profile文件：  
+create  profile  pro1 limit failed_login_attempts 3 password_lock_time 2;  --其中，failed_login_attempts:用于指定联系登陆的最大失败次数.    
+--password_lock_time:用于指定帐户被锁定的天数. 
+
+--创建属于pro1的用户：
+create user aa identified by aa profile pro1;  
+
+--修改用户的profile文件：
+alter user test1 profile pro1;
+
+--解除锁定：  
+alter  user  test1  account  unlock;
+   
+--终止口令：需要每隔10天修改密码，最多宽限2天：  
+alter profile "pro1" limit password_life_time 10 password_grace_time 2
+    
+--删除profile：  
+drop profile pro1 cascade;   
+--使得test1的profile重新变成了default
+```
+#### Oracle11g基础--权限
+>权限指的是执行特定命令或访问数据库对象的权利；  
+>权限有两种类型，系统权限和对象权限。
+>>系统权限允许用户执行某些数据库操作，如创建表就是一个系统权限；   
+对象权限允许用户对数据库对象（如表、视图、序列等）执行特定操作。
+
+```SQL
+--授予用户权限，可以是系统权限或者对象权限
+grant privilege [,privilege…]
+to  user [, user|role, public…] 
+[with admin option];
+--说明：包含了with admin option，只能是系统权限。
+
+--收回系统权限revoke
+revoke create session from test1;
+```
+- GRANT 命令可用于为用户分配权限或角色 
+```SQL
+--此系统权限允许用户连接到数据库上
+GRANT CREATE SESSION  TO  wang; 
+
+--赋给wang用户以创建表的系统权限
+GRANT CREATE TABLE  TO wang; 
+
+--此系统权限允许wang用户任意使用表空间
+GRANT UNLIMITED TABLESPACE TO wang; 
+```
+#### Oracle11g基础--对象权限
+```SQL
+--对象权限：访问某个用户的特定对象(如表、视图等)的对象权限(select on scott.student) 
+grant object_privilege [columns…]
+on  object  to  user [, user|role, public…] 
+[with grant option];
+
+--收回对象权限revoke：
+revoke privilege     on object 
+from {user|role|public};
+
+例：revoke select on scott.student from test2;
+```
+- 授予用户 wang操作EMP表对象的权限
+```SQL
+--允许用户查询 emp 表的记录
+grant select on scott.emp to wang; 
+
+--允许用户更新 emp 表中的记录
+grant update on scott.emp to wang; 
+
+--允许用户插入、删除、更新和查询 
+emp 表中的记录
+grant all on scott.emp to wang; 
+
+--授予精确到列上的权限 
+--允许用户更新 emp 表中的ename、sal列
+grant update(ename,sal) on scott.emp to wang;
+```
+#### Oracle11g基础—角色管理
+- 角色管理:角色是一组相关权限的组合，可以将权限授予角色，再把角色授予用户，以简化权限管理。
+
+```SQL
+--(1)创建角色create role,应该具有create role系统权限。  
+create role role_name;
+--(2) 授予角色权限，可以是系统权限或者对象权限。
+grant privilege to role;
+例： grant create session ,create any table, drop any table to role1;
+--(3) 将角色授予用户
+grant role to user;
+例： grant role1 to test2;
+--(4) 从用户收回角色
+revoke  role  from  user;
+```
+- -角色管理:角色是一组相关权限的组合，可以将权限授予角色，再把角色授予用户，以简化权限管理。
+```SQL
+--(1)创建角色create role,应该具有create role系统权限。  
+create role role_name;
+--(2) 授予角色权限，可以是系统权限或者对象权限。
+grant privilege to role;
+例： grant create session ,create any table, drop any table to role1;
+--(3) 将角色授予用户
+grant role to user;
+例： grant role1 to test2;
+--(4) 从用户收回角色
+revoke  role  from  user;
+```
+- GRANT 命令可用于为用户分配权限或角色
+```SQL
+--CONNECT角色允许用户连接至数据库，
+并创建数据库对象
+GRANT CONNECT TO wang; 
+
+--RESOURCE角色允许用户使用数据库中的存储空间
+GRANT RESOURCE TO wang; 
+
+--此系统权限允许用户连接到数据库上
+GRANT CREATE SESSION TO wang; 
+
+--ALTER USER 命令可用于更改口令 
+ALTER USER wang IDENTIFIED BY wangnewpwd;
+
+-- DROP USER 命令用于删除用户 
+DROP USER wang [CASCADE]; 
+```
+ - 练习
 ```SQL
 SQL> conn system/system@ZSR;
 Connected to Oracle Database 11g Express Edition Release 11.2.0.2.0 
