--- a/oracle/同义词.md
+++ b/oracle/同义词.md
@@ -9,3 +9,21 @@
 同义词共有两种类型：  
 >>公有同义词可被所有的数据库用户访问。    
 私有同义词只能在其模式内访问，且不能与当前模式的对象同名。  
+
+```SQL
+--私有同义词
+CREATE SYNONYM emp FOR SCOTT.emp;
+--SCOTT.emp的别名，模式名，表名
+
+--公有同义词
+CREATE PUBLIC SYNONYM emp_syn FOR SCOTT.emp;
+--同义词名称
+
+--创建或替换现有的同义词
+CREATE OR REPLACE SYNONYM emp_syn FOR SCOTT.emp;
+--替换现有的同义词
+
+--删除同义词
+DROP SYNONYM emp; 
+DROP PUBLIC SYNONYM emp_syn;
+```
