--- a/oracle/同义词.md
+++ b/oracle/同义词.md
@@ -27,3 +27,93 @@ CREATE OR REPLACE SYNONYM emp_syn FOR SCOTT.emp;
 DROP SYNONYM emp; 
 DROP PUBLIC SYNONYM emp_syn;
 ```
+
+- 练习
+```SQL
+--在ZSR用户底下：
+select *from employee;
+
+--在system用户底下，要携带表的属主,否则"ORA-00942: 表或视图不存在"
+select *from ZSR.employee;
+
+--每一次这么写很麻烦，这个时候可以使用表的同义词。
+eg.create synonym syn1 for ZSR.employee;
+
+--效果和select *from ZSR.employee;一样
+select * from syn1；
+
+--这个是私用同义词。system用户所创建的syn1是私有同义词，其他用户使用不了。
+--其他用户访问私有同义词，ORA-00942: 表或视图不存在
+
+--创建公有同义词
+eg.create public synonym syn1 for ZSR.employee;
+
+--ZSR用户创建自己表的同义词，会出现权限不足。
+create synonym syn_emp for employee;
+
+grant create synonym to employee;
+
+select *from syn_emp;
+
+--默认也没有创建公有同义词的权限
+--赋权
+grant create public synonym to employee;
+
+create public synonym syn_emp for employee;
+--所有用户都可以访问公有同义词
+
+--创建用户实验
+create user test1 identified by test1;
+grant connect to test1;
+
+select *from ZSR.employee;
+--因为改用户访问不了基表，所以公有同义词也是访问不了
+select *from sys_emp;
+
+--要在ZSR用户赋权给test1
+grant select on employee to test1;
+
+--删除同义词,公有同义词要加public，否则会认为该同义词不存在
+drop public synonym sys_emp;
+
+select *from tab;
+--tab究竟是什么？
+--视图，ZSR用户访问
+select *from all_objects ao
+where ao.object_name='TAB';
+
+OWNER                          OBJECT_NAME                    SUBOBJECT_NAME                  OBJECT_ID DATA_OBJECT_ID OBJECT_TYPE         CREATED     LAST_DDL_TIME TIMESTAMP           STATUS  TEMPORARY GENERATED SECONDARY  NAMESPACE EDITION_NAME
+------------------------------ ------------------------------ ------------------------------ ---------- -------------- ------------------- ----------- ------------- ------------------- ------- --------- --------- --------- ---------- ------------------------------
+SYS                            TAB                                                                 3176                VIEW                2011/8/27 8 2011/8/27 8:2 2011-08-27:08:21:27 VALID   N         N         N                  1 
+PUBLIC                         TAB                                                                 3178                SYNONYM             2011/8/27 8 2011/8/27 8:2 2011-08-27:08:21:27 VALID   N         N         N                  1 
+SYSTEM                         TAB                                                                 3177                SYNONYM             2011/8/27 8 2011/8/27 8:2 2011-08-27:08:21:27 VALID   N         N         N                  1 
+
+--视图、同义词、表
+--user_synonyms视图
+select *from user_synonyms us
+where us.synonym_name='TAB';
+
+SYNONYM_NAME                   TABLE_OWNER                    TABLE_NAME                     DB_LINK
+------------------------------ ------------------------------ ------------------------------ --------------------------------------------------------------------------------
+TAB                            SYS                            TAB                            
+
+--在ZSR用户查看公有同义词
+select *from all_synonyms us
+where us.synonym_name='TAB';
+
+OWNER                          SYNONYM_NAME                   TABLE_OWNER                    TABLE_NAME                     DB_LINK
+------------------------------ ------------------------------ ------------------------------ ------------------------------ --------------------------------------------------------------------------------
+PUBLIC                         TAB                            SYS                            TAB                            
+SYSTEM                         TAB                            SYS                            TAB                            
+
+--这两种写法，意义一样
+desc sys.tab;
+desc tab;
+
+Name      Type         Nullable Default Comments 
+--------- ------------ -------- ------- -------- 
+TNAME     VARCHAR2(30)                           
+TABTYPE   VARCHAR2(7)  Y                         
+CLUSTERID NUMBER       Y    
+```
+
